--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.application.name=DemoWebSocket
+
 logging.level.org.springframework.web.socket=DEBUG
 server.port=8884
+
+
+spring.datasource.url=jdbc:mysql://localhost:3333/message_cms?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
