--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=DemoWebSocket
 logging.level.org.springframework.web.socket=DEBUG
-server.port=8884
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/message?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
